# openCL

./: .gitignore  128.in  128.out  2048.out  256.in  256.out  32.in  32.out  512.in  512.out  64.in  64.out  CMakeLists.txt  a+b_device_program.cl  a+b_opencl.cpp  fill.py  main.c  main.cpp  matrix.cpp  matrix_device_program.cl  matrix_naive.cpp  matrix_opencl.cpp  matrix_opencl_mwpt.cpp  matrix_opencl_mwpt_device_program.cl  matrix_openmp.cpp  matrix_parallel.cpp  matrix_tile_device_program.cl  matrix_tile_opencl.cpp  opencl.cpp  prefix_sum.cpp  prefix_sum_device_program.cl  prefix_sum_naive.cpp  util.h
